# Krequest-HTTP-SSL

./: CMakeLists.txt  README.md
src/: Krequest.h  model
src/method/: method_model.h  object_templates.h
src/request/: Krequest-request.h  Krequest_request.h
test/: main.cpp
